avoid scrollbar on mobile view

--- a/style/summary_login/summary_responsive.css
+++ b/style/summary_login/summary_responsive.css
@@ -25,10 +25,6 @@
 }
 
 @media (max-width: 1170px) {
-    .main-content {
-        padding: 0px 32px;
-    }
-
     .summary-title {
         font-size: 42px;
     }
@@ -51,12 +47,6 @@
 }
 
 @media (max-width: 1150px) {
-    .main-content {
-        padding: 0px 15px;
-        margin: 0 auto;
-
-    }
-
     .summary-padding-top {
         padding-top: 60px;
     }
@@ -71,27 +61,47 @@
 
 @media (max-width: 800px) {
     .summary-cards-wrapper {
-        max-width: 490px;
+        width: 100%;
     }
 }
 
 @media (max-width: 767px) {
     .summary-padding-top {
-        padding-top: 40px;
+        padding-top: 16px;
     }
 
     .summary-content-layout {
         margin-top: 10px;
     }
 
-    .summary-cards-wrapper {
-        margin-bottom: 110px;
-    }
-
     .summary-container-height {
         height: 90px;
     }
 
+    .main-content {
+        height: calc( 100vh - 96px - 72px);
+        min-height: unset;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        box-sizing: border-box;
+    }
+
+    .contact-header-text {
+        padding-left: 16px;
+    }
+
+     .summary-row{
+        gap: 0px;
+    }
+
+    .number-label {
+        font-size: 16px;
+    }
+
+    .summary-cards-last-row{
+        width: calc(100% / 3);
+    }
 }
 
 @media (max-width: 510px) {
@@ -109,13 +119,9 @@
     }
 
     .summary-cards-first-row:hover,
-    .summary-cards-last-row:hover,
-    .summary-card-second-row:hover {
+    .summary-card-second-row:hover,
+    .summary-cards-last-row:hover {
         padding: 20px;
-    }
-
-    .number-label {
-        font-size: 16px;
     }
 
     .urgent-icon {
@@ -130,23 +136,12 @@
         font-size: 16px;
     }
 
-    .summary-row {
-        gap: 5px;
-    }
-
-    .summary-cards-wrapper {
-        margin-bottom: 170px;
-        max-width: 385px;
-    }
-
     .summary-cards-first-row {
         gap: 5px;
     }
-}
 
-@media (max-width: 500px) {
-    .summary-cards-wrapper {
-        margin-bottom: 138px;
+    .main-content {
+        padding: 16px;
     }
 }
 
@@ -161,15 +156,12 @@
     }
 
     .summary-cards-wrapper {
-        width: 100%;
-        height: 548px;
+        height: 100%;
         margin: 0px -5px;
         gap: 20px;
-        margin-bottom: 56px;
     }
 
     .summary-cards-last-row{
-        width: calc(100% / 3);
         margin: 5px;
     }
 
@@ -217,7 +209,6 @@
 @media (max-width: 375px) and (max-height: 667px) {
     .summary-cards-wrapper {
         gap: 0px;
-        margin-bottom: 0px;
         height: 364px;
     }
 
